# CppTestApp

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp  main.qml  qml.qrc
data/dialog/: dialog1.json  dialog2.json  dialog3.json  dialog4.json
data/quiz/quiz01/: config.json  question01.json  question02.json  question03.json  question05.json  question06.json  question07.json  question08.json  question09.json
data/quiz/quiz02/: config.json  question01.json  question02.json  question03.json  question06.json  question07.json  question08.json
data/quiz/quiz03/: config.json
data/quiz/quiz04/: config.json  question01.json  question03.json  question04.json  question05.json  question06.json
data/quiz/quiz05/: config.json  question04.json
data/quiz/quiz06/: config.json  question01.json  question02.json  question03.json  question04.json  question05.json  question06.json
data/quizdata/quiz02/: config.json
data/study/topic01/: config.json  content.json
data/study/topic02/: config.json  content.json
data/study/topic03/: config.json  content.json
data/testing/test01/: config.json
data/testing/test02/: config.json
data/testing/test03/: config.json
data/testing/test04/: config.json
data/testing/test05/: config.json
resources/: resources.qrc
src/: basiccontroller.cpp  basiccontroller.h  main.qml
src/entryview/: EntryView.qml  EntryViewIndicator.qml  EntryViewPage.qml  entryviewcontroller.cpp  entryviewcontroller.h
src/mainpage/: MainPage.qml  mainpagecontroller.cpp  mainpagecontroller.h
src/quizmenu/: QuizMenu.qml  QuizMenuPage.qml  quizmenucontroller.cpp  quizmenucontroller.h  quizmenupagemodel.h
src/quizview/: QuizTimer.qml  QuizView.qml  quizviewcontroller.cpp  quizviewcontroller.h  quizviewmodel.h
src/studymenu/: StudyMenu.qml  StudyMenuPage.qml  studymenucontroller.cpp  studymenucontroller.h  studymenupagemodel.h
src/studyview/: StudyView.qml  StudyViewPage.qml  studyviewcontroller.cpp  studyviewcontroller.h  studyviewpagemodel.h
src/testingview/: TestingView.qml  TestingViewPage.qml  testfunctions.cpp  testfunctions.h  testingviewcontroller.cpp  testingviewcontroller.h  testingviewpagemodel.h
(+3 files in other folders)
